Subiendo página web

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 	<div class="galeria">
 		<div class="linea"></div>
 		<div class="contenedor-imagenes">
-			<div class="imagen"><a href="galeria_panques.html"><img src="../img/img_01.jpg" alt=""></a></div>
-			<div class="imagen"><a href="galeria_panques.html"><img src="../img/img_27.jpg" alt=""></a></div>
+			<div class="imagen"><a href="galeria_panques.html"><img src="img/img_01.jpg" alt=""></a></div>
+			<div class="imagen"><a href="galeria_panques.html"><img src="img/img_27.jpg" alt=""></a></div>
 			<div class="imagen"><a href="galeria_panques.html"><img src="../img/img_29.jpg" alt=""></a></div>
 			<div class="imagen"><a href="galeria_panques.html"><img src="../img/img_30.jpg" alt=""></a></div>
 			<div class="imagen"><a href="galeria_panques.html"><img src="../img/img_31.jpg" alt=""></a></div>
