--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Handlee&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Acme&family=Pacifico&display=swap" rel="stylesheet">
 	<script src="../js/main.js"></script>
+	<script src="https://kit.fontawesome.com/fca8c1d624.js" crossorigin="anonymous"></script>
 
 	<title>Postres y algo más Monroy</title>
 </head>
@@ -50,7 +51,7 @@
 			<div class="imagen"><a href="galeria_panques.html"><img src="../img/img_30.jpg" alt=""></a></div>
 			<div class="imagen"><a href="galeria_panques.html"><img src="../img/img_31.jpg" alt=""></a></div>
 			<div class="imagen"><a href="galeria_panques.html"><img src="../img/img_33.jpg" alt=""></a></div>
-			<div class="imagen"><a href="galeria_gelatinas.html"><img src="../img/img_23.jpg" alt=""></a></div>
+			<div class="imagen"><a href="galeria_gelatinas.html"><img src="img/img_23.jpg" alt=""></a></div>
 			<div class="imagen"><a href="galeria_panques.html"><img src="../img/img_26.jpg" alt=""></a></div>
 			<div class="imagen"><a href="galeria_panques.html"><img src="../img/img_28.jpg" alt=""></a></div>
 			<div class="imagen"><a href="galeria_flan.html"><img src="../img/img_03.jpg" alt=""></a></div>
@@ -72,6 +73,9 @@
 	</main>	
 	
 	<footer>
+		<a href="https://www.facebook.com"><i class="fab fa-facebook"></i></a>
+		<a href="#"><i class="fab fa-whatsapp"></i></a>
+
 		<p>Todos los derechos reservados a "Postres y algo más Monroy"</p>
 	</footer>
 </body>
